DevTools: Audit results: avoid horizontal scrollbar.
When audit results pane is shinked it's items content is wrapped, but
headers aren't. This cause unwanted horizontal scroll.

This patch adds 'overflow: hidden' rule, so headers will be properly cutted.

BUG=405465

Review URL: https://codereview.chromium.org/493023002

git-svn-id: svn://svn.chromium.org/blink/trunk@180732 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/sidebarPane.css
+++ b/front_end/sidebarPane.css
@@ -83,6 +83,7 @@
     background-clip: padding;
     margin-top: -1px;
     white-space: nowrap;
+    overflow: hidden;
 }
 
 .sidebar-pane-title:active {
